ops.view3d.select_or_deselect_all only select a face if the mouse cursor is in the middle of the face. #44383

Closed
opened 2015-04-14 05:40:21 +02:00 by Germano Cavalcante · 7 comments

System Information
windows 64 bits

Blender Version
Broken: 2.74

Short description of error
if you use select_or_deselect_all operator to select a face, it only selects the face if the mouse cursor is in the middle of it. If you just withdraw a little from the middle, the face is deselected. This only occurs if the selection mode is not (False, False, True).

Exact steps for others to reproduce the error
This script shows a modal operator that demonstrates the problem:

    import bpy

    class Select_or_Deselect_all(bpy.types.Operator):
        """Select element under the mouse, deselect everything is there’s nothing under the mouse"""
        bl_idname = "object.select_or_deselect_all"
        bl_label = "Select or Deselect All"

        def modal(self, context, event):
            if event.type == 'MOUSEMOVE':
                bpy.ops.view3d.select_or_deselect_all('INVOKE_DEFAULT')

            elif event.type in {'LEFTMOUSE', 'RIGHTMOUSE', 'ESC'}:
                return {'FINISHED'}

            return {'RUNNING_MODAL'}

        def invoke(self, context, event):
            if context.object:
                bpy.ops.object.mode_set(mode='EDIT')
                context.space_data.use_occlude_geometry = True
                context.tool_settings.mesh_select_mode = (True, True, True)
                #context.tool_settings.mesh_select_mode = (False, False, True)

                context.window_manager.modal_handler_add(self)
                return {'RUNNING_MODAL'}
            else:
                self.report({'WARNING'}, "No active object, could not finish")
                return {'CANCELLED'}

    def register():
        bpy.utils.register_class(Select_or_Deselect_all)

    def unregister():
        bpy.utils.unregister_class(Select_or_Deselect_all)

    if __name__ == "__main__":
        register()

Here is a blender file to facilitate testing:
select_or_deselect_all.blend

**System Information** windows 64 bits **Blender Version** Broken: 2.74 **Short description of error** if you use select_or_deselect_all operator to select a face, it only selects the face if the mouse cursor is in the middle of it. If you just withdraw a little from the middle, the face is deselected. This only occurs if the selection mode is not (False, False, True). **Exact steps for others to reproduce the error** This script shows a modal operator that demonstrates the problem: ``` import bpy class Select_or_Deselect_all(bpy.types.Operator): """Select element under the mouse, deselect everything is there’s nothing under the mouse""" bl_idname = "object.select_or_deselect_all" bl_label = "Select or Deselect All" def modal(self, context, event): if event.type == 'MOUSEMOVE': bpy.ops.view3d.select_or_deselect_all('INVOKE_DEFAULT') elif event.type in {'LEFTMOUSE', 'RIGHTMOUSE', 'ESC'}: return {'FINISHED'} return {'RUNNING_MODAL'} def invoke(self, context, event): if context.object: bpy.ops.object.mode_set(mode='EDIT') context.space_data.use_occlude_geometry = True context.tool_settings.mesh_select_mode = (True, True, True) #context.tool_settings.mesh_select_mode = (False, False, True) context.window_manager.modal_handler_add(self) return {'RUNNING_MODAL'} else: self.report({'WARNING'}, "No active object, could not finish") return {'CANCELLED'} def register(): bpy.utils.register_class(Select_or_Deselect_all) def unregister(): bpy.utils.unregister_class(Select_or_Deselect_all) if __name__ == "__main__": register() ``` Here is a blender file to facilitate testing: [select_or_deselect_all.blend](https://archive.blender.org/developer/F161707/select_or_deselect_all.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Campbell Barton was assigned by Germano Cavalcante 2015-04-14 05:40:21 +02:00
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

I researched on the Blender code. It seems the problem is directly related to the "bpy.ops.view3d.select".
This is an old function (written in C code internally) that was converted to an operator.
Despite it influence all the selections in Blender 3d_view, I think it's important to reformulate (update) the faces selection mode with vertices or edges also enabled.
Currently the selection of faces, edges and vertices can be represented as follows:
seleção.jpg
This is not the best way, since all the gray area should intuitively select the face. As is seen in other programs (such as Maya).
I do not understand C++ but I think the code selection in 3d_view is this:
https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_view3d/view3d_select.c

I researched on the Blender code. It seems the problem is directly related to the "bpy.ops.view3d.select". This is an old function (written in C code internally) that was converted to an operator. Despite it influence all the selections in Blender 3d_view, I think it's important to reformulate (update) the faces selection mode with vertices or edges also enabled. Currently the selection of faces, edges and vertices can be represented as follows: ![seleção.jpg](https://archive.blender.org/developer/F162210/seleção.jpg) This is not the best way, since all the gray area should intuitively select the face. As is seen in other programs (such as Maya). I do not understand C++ but I think the code selection in 3d_view is this: https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_view3d/view3d_select.c

This issue was referenced by d57a93a7cb

This issue was referenced by d57a93a7cb4d54e1ce0d890540926ef6ab88270a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d57a93a7cb.

Closed by commit d57a93a7cb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44383
No description provided.